--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
-  "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend",
+  
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Shibu",
   "license": "ISC",
